--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
 				<input type="text" autocomplete="off" data-md5="6eb2eaa75579233883e0b8c698ddeed5">
 			</section>
 			<section>
-				<p>
-					Using a spreadsheet, I create a sequence of numbers in the 7 times table: 7, 14, 21...700.
-					When I add up all the numbers, what is the total?
-				</p>
-				<input type="text" autocomplete="off" data-md5="ba3fe3d296f3e7269b66f163d31b3dc3">
-			</section>
-			<section>
 				<img src="qrcode.png" class="lightbox" />
 				<input type="text" autocomplete="off" data-md5="7e1fc7738a2dbafc0984a3c78ad2f076">
+			</section>
+			<section>
+				<p>
+					What is the total if you add up only the positive numbers in the <a href="addpositives.xlsx">worksheet</a>?
+				</p>
+				<input type="text" autocomplete="off" data-md5="46ab19c42d821b6c948faaaf948ad3ea">
 			</section>
 			<section>
 				<p>
@@ -38,6 +37,12 @@
 				</p>
 				<img src="scary.jpg" class="lightbox" />
 				<input type="text" autocomplete="off" data-md5="5a0d132ad24cc8227c8dced7754570a3">
+			</section>
+			<section>
+				<p>
+					SGD OZRRVNQC HR RZMCVHBG
+				</p>
+				<input type="text" autocomplete="off" data-md5="2fe238cdc81d1d42232d54c47b3e172a">
 			</section>
 			<section>
 				<p>
@@ -60,6 +65,13 @@
 			</section>
 			<section>
 				<p>
+					Using a spreadsheet, I create a sequence of numbers in the 7 times table: 7, 14, 21...700.
+					When I add up all the numbers, what is the total?
+				</p>
+				<input type="text" autocomplete="off" data-md5="ba3fe3d296f3e7269b66f163d31b3dc3">
+			</section>
+			<section>
+				<p>
 					I type the letter <b>a</b> into a text editor, then the letters <b>ab</b>, then <b>abc</b> and so on...
 				</p>
 				<p>
@@ -73,24 +85,29 @@
 			<section>
 				<p>
 					Type all the letters in the previous question into the box below!
-					(You can save yourself some typing if you think carefully!)
+					(You can save yourself some typing with Python or a spreadsheet!)
 				</p>
 				<input type="text" autocomplete="off" data-md5="cf4102258b64eab47149f6c5b29c9bf2">
 			</section>
 			<section>
 				<p>
-					The name of the Snapdragon
-					<a href="https://en.wikipedia.org/wiki/Graphics_processing_unit" target="_blank">GPU</a> series used on many mobile phones, such as the Huawei P50 Pro.
+					The title of the book with this on the back:
 				</p>
-				<input type="text" autocomplete="off" data-md5="f577a3c3bb0672ba43d14ea65ba53f24">
+				<img src="isbn.png" class="lightbox" />
+				<input type="text" autocomplete="off" data-md5="b570e3e0b4b10e373176077d45ed798c">
+			</section>
+			<section>
+				<p>
+					What is the codename for Intel's 10th generation core processors?
+				</p>
+				<input type="text" autocomplete="off" data-md5="1508ceb44a9d62845bbe0eade8f12526">
 			</section>
 			<section>
 				<p>
 					Stare at the picture and unfocus your eyes. Eventually a two-digit <b>hexadecimal</b> code will appear in 3D!
-					Enter the value in <b>decimal</b>.
 				</p>
 				<img src="stereogram.jpg" class="lightbox" />
-				<input type="text" autocomplete="off" data-md5="a0a080f42e6f13b3a2df133f073095dd">
+				<input type="text" autocomplete="off" data-md5="142ba1ee3860caecc3f86d7a03b5b175">
 			</section>
 			<section>
 				<p>
